# htscheme

./: .gitignore  .ycm_extra_conf.py  .~lock.Test_week2.docx#  1.in  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Makefile.orig  README.md  Test_week1.docx  Test_week2.docx  _8ycm__extra__conf_8py_source.html  _r_e_a_d_m_e_8md_source.html  all_8hpp.html  all_8hpp__dep__incl.md5  all_8hpp__incl.map  all_8hpp__incl.md5  annotated.html  arch_8hpp__dep__incl.map  arch_8hpp__dep__incl.md5  arch_8hpp__incl.map  ast.cpp  ast.hpp  asttest  bigint_8cpp.html  bigint_8cpp.js  bigint_8cpp__incl.dot  bigint_8cpp__incl.md5  bigint_8cpp_source.html  bigint_8hpp.html  bigint_8hpp__incl.dot  bigint_8hpp__incl.map  biginttest  biginttest_8cpp.js  biginttest_8cpp__incl.map  biginttest_8cpp__incl.md5  boolean_8hpp.html  boolean_8hpp.js  boolean_8hpp__incl.map  (+119 more)
doc/: doxygen_sqlite3.db
funs/: :w  \  abs.cpp  abs.hpp  all.hpp  all.hpp.orig  arch.cpp  arch.hpp  ceiling.cpp  ceiling.cpp.orig  ceiling.hpp  charequal.cpp  charequal.hpp  complexfun.cpp  complexfun.hpp  denominator.cpp  denominator.hpp  equal.cpp  equal.hpp  exactjudge.cpp  exactjudge.hpp  exacttoinexact.cpp  exacttoinexact.cpp.orig  exacttoinexact.hpp  exp.cpp  exp.hpp  expt.cpp  expt.cpp.orig  expt.hpp  floor.cpp  floor.cpp.orig  floor.hpp  gcd.cpp  gcd.hpp  imagpart.cpp  imagpart.cpp.orig  imagpart.hpp  inequality  inequality.cpp  inequality.hpp  (+40 more)
parsers/: .all.hpp.swo  all.cpp  all.hpp  arch.hpp  define.cpp  define.hpp  identifier.cpp  identifier.cpp.orig  identifier.hpp  lambda.cpp  lambda.cpp.orig  lambda.hpp  lambdadefine.cpp  (+13 more)
(+851 files in other folders)
